syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "GhostNetwork.Profiles.Grpc";

package profiles;

service Profiles {
  rpc GetById (ByIdRequest) returns (Profile);
  rpc Create (Profile) returns (Profile);
  rpc Update (Profile) returns (google.protobuf.Empty);
  rpc Delete (ByIdRequest) returns (google.protobuf.Empty);
}

message ByIdRequest {
  string id = 1;
}

message Profile {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  google.protobuf.StringValue gender = 4;
  google.protobuf.Timestamp date_of_birth = 5;
  google.protobuf.StringValue city = 6;
}
